# GenericLogger

./: .gitattributes  CMakeLists.txt  Makefile  README.md  run_tests.sh
.github/workflows/: Code_coverage.yml  Validate.yml
Report/: index-sort-f.html  index-sort-l.html  index.html
Report/src/: index-sort-f.html  index-sort-l.html  index.html  logger.cpp.func-sort-c.html  logger.cpp.func.html  logger.cpp.gcov.html
Report/test/: index-sort-f.html  index-sort-l.html  index.html  test_logger.cpp.func-sort-c.html  test_logger.cpp.func.html  test_logger.cpp.gcov.html
include/: logger.h
lib/: Readme.txt
src/: logger.cpp
